manifests/frontend-deployment-v20.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: snpsuen/frontend-app:2.0
        # imagePullPolicy: Never
        ports:
        - containerPort: 8080
