manifests/meshfront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshfront-deployment
  labels:
    app: meshfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meshfront
  template:
    metadata:
      labels:
        app: meshfront
    spec:
      containers:
      - name: meshfront
        image: snpsuen/meshfront:v1
        # imagePullPolicy: Never
        ports:
        - containerPort: 5005
