manifests/car-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-catalog-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: car-catalog
  template:
    metadata:
      labels:
        app: car-catalog
    spec:
      containers:
      - name: car-catalog
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: car-catalog-service
  labels:
    app: car-catalog
spec:
  ports:
  - port: 80
  selector:
    app: car-catalog
