manifests/car-truck-combo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-truck-combo
      workload: car-catalog
  template:
    metadata:
      labels:
        app: car-truck-combo
        workload: car-catalog
    spec:
      containers:
      - name: car-catalog
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truck-catalog-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-truck-combo
      workload: truck-catalog
  template:
    metadata:
      labels:
        app: car-truck-combo
        workload: truck-catalog
    spec:
      containers:
      - name: truck-catalog
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: car-truck-combo-service
  labels:
    app: car-truck-combo
spec:
  ports:
  - port: 80
  selector:
    app: car-truck-combo
  type: LoadBalancer
