manifests/meshfront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meshfront-service
spec:
  selector:
    app: meshfront
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5005
