manifests/service-mesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-mesh
spec:
  ports:
  - name: http-service-mesh
    protocol: TCP
    port: 80
