manifests/webapp-deployment-v40.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-4.0
  labels:
    app: webapp
    version: v4.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
      version: v4.0
  template:
    metadata:
      labels:
        app: webapp
        version: v4.0
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - name: webapp
        image: snpsuen/web-app:4.0
        # imagePullPolicy: Never
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 40
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 120 
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
  - name: http-webapp
    protocol: TCP
    port: 80
    targetPort: 5000
