manifests/bookinfo-gateway_tutorial.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.external.com"
---
apiVersion: v1
kind: Service
metadata:
  name: podless
spec:
  ports:
  - name: http-podless
    protocol: TCP
    port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: endpointless
spec:
  hosts:
  - endpointless
  addresses:
  - 10.96.25.1
  ports:
  - number: 80
    name: http-endpointless
    protocol: HTTP
  location: MESH_INTERNAL
  resolution: STATIC
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - mygateway.external.com
  - podless
  - endpointless
  gateways:
  - bookinfo-gateway
  - mesh
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
